wellesleynet/roles/k8s/files/droppy.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: droppy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: droppy
  serviceName: "droppy"
  template:
    metadata:
      labels:
        app: droppy
    spec:
      containers:
      - image: silverwind/droppy:12.2.0
        imagePullPolicy: Always
        name: droppy
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: droppy-data
          mountPath: /files
        - name: droppy-config
          mountPath: /config
        livenessProbe:
          exec:
            command:
            - ls
            - /config/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: droppy-data
        persistentVolumeClaim:
          claimName: droppy-data
      - name: droppy-config
        persistentVolumeClaim:
          claimName: droppy-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: droppy
spec:
  selector:
    app: droppy
  ports:
  - name: droppy
    port: 8989
    protocol: TCP
    targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: droppy
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
spec:
  rules:
  - host: droppy.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: droppy
            port:
              number: 8989
  - host: files.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: droppy
            port:
              number: 8989
  tls:
  - hosts:
    - droppy.kiski.co
    secretName: droppy-kiski-co-tls
  - hosts:
    - files.kiski.co
    secretName: files-kiski-co-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: droppy-share
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
  - host: droppy.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/$/"
        backend:
          service:
            name: droppy
            port:
              number: 8989
  - host: files.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/$/"
        backend:
          service:
            name: droppy
            port:
              number: 8989
  tls:
  - hosts:
    - droppy.kiski.co
    secretName: droppy-kiski-co-tls
  - hosts:
    - files.kiski.co
    secretName: files-kiski-co-tls
